--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     <link rel="dns-prefetch" href="https://www.google-analytics.com" />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
     
+    <!-- Google Fonts — loaded non-blocking via link instead of CSS @import -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;700&display=swap" media="print" onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;700&display=swap" /></noscript>
+    
     <!-- Structured Data - Organization -->
     <script type="application/ld+json">
     {
