--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   <!-- Verification Tags -->
   <meta name="google-site-verification" content="YzKWo5cCx7_O8t0ZmufOjzHW8YCTqkQyZ25AZTrJKmU" />
-  <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE" />
-  <meta name="yandex-verification" content="YOUR_YANDEX_VERIFICATION_CODE" />
+  <meta name="msvalidate.01" content="43FB9B3B21328F7D75E7278F841B721E" />
+  <meta name="yandex-verification" content="027cc66f6f30bdad" />
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -309,12 +309,14 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- Google Analytics (replace with your ID) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW8L9VB19R"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+
+    gtag('config', 'G-MW8L9VB19R');
   </script>
 </body>
 
